--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,7 +3,15 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
+  <br>
+  <%= f.label 'Aritst' %>
+  <%= f.text_field :artist_name %>
+  <%= f.label 'Genre' %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+  <%= f.label 'Notes' %>
+  <%= f.text_field :note_contents, id: "song_notes_1", name: "song[note_contents[]" %><br>
+  <%= f.text_field :note_contents, id: "song_notes_2", name: "song[note_contents[]" %><br>
+
 
   <%= f.submit %>
 <% end %>
